k8s_manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jobboard
  labels:
    app: jobboard-backend
spec:
  selector:
    app: jobboard-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  # ClusterIP = internal only
  # Traffic comes in through the Ingress, not directly
  type: ClusterIP
