k8s_manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: jobboard
  labels:
    app: jobboard-frontend
spec:
  selector:
    app: jobboard-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
